# ollama-tui

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CURRENT_STATE.md  Cargo.toml  FINAL_SUMMARY.md  FIXES.md  LICENSE  MIGRATION_PLAN.md  PROJECT_STATUS.md  README.md  SESSION_SUMMARY.md  claude-review.md  code-review.md  error-addons-.md  error-audit-progress.md  main.py  router.py
ai-suite/: Cargo.toml
ai-suite-cli/: Cargo.toml
ai-suite-cli/src/: lib.rs
ai-suite-gui/: Cargo.toml
ai-suite-gui/src/: app.rs  backend.rs  commands.rs  lib.rs  main.rs  message.rs  settings.rs  theme.rs
ai-suite-gui/src/app/: actions.rs
ai-suite-gui/src/ui/: chat.rs  composer.rs  mod.rs  sidebar.rs
ai-suite/src/: bootstrap.rs  errors.rs  lib.rs  llm.rs  stream.rs
ai-suite/src/cli/: mod.rs
ai-suite/src/extensions/: mod.rs
ai-suite/src/prompt_rules/: mod.rs  report.rs  state.rs  storage.rs  target.rs  tests.rs
ai-suite/src/providers/: execution.rs  http.rs  mod.rs  openai.rs  xai.rs
ai-suite/src/providers/anthropic/: config.rs  http.rs  mod.rs  stream_parser.rs
ai-suite/src/providers/ollama/: client.rs  host.rs  http.rs  mod.rs  models.rs  stream.rs  tests.rs
ai-suite/src/providers/openai_compatible/: client.rs  http.rs  stream.rs  tests.rs
ai-suite/src/routing/: catalog.rs  explain.rs  mod.rs  profile.rs  selection.rs  tests.rs
ai-suite/src/routing/profile/: keywords.rs
ai-suite/src/routing/tests/: fallbacks.rs  invariants.rs  privacy.rs  support.rs
ai-suite/src/runtime/: config.rs  environment.rs  file_config.rs  mod.rs  paths.rs
ai-suite/src/storage/: history.rs  mod.rs
ai-suite/src/subcommands/: capabilities.rs  registry.rs  spec.rs
ai-suite/src/tools/: execution.rs  mod.rs  registry.rs  spec.rs
src/: app.rs  (+18 more)
(+310 files in other folders)
