[package]
name    = "ai-suite-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ai-suite"
path = "src/main.rs"

[[bin]]
name = "ai"
path = "src/bin/ai.rs"

[dependencies]
ai-suite     = { path = "../ai-suite" }
ai-suite-gui = { path = "../ai-suite-gui" }
anyhow       = "1"
tokio        = { version = "1", features = ["rt-multi-thread"] }
