[package]
name    = "ai-suite"
version = "0.1.0"
edition = "2024"

[lib]
name = "ai_suite"
path = "src/lib.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
crossterm   = "0.28"
ratatui     = "0.29"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
toml        = "0.8"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
